[package]
name = "naps"
version = "0.1.0"
edition = "2021"
description = "NATS server proxy service to relay and forward custom topics and subjects"
homepage = "https://github.com/sonirico/naps"
repository = "https://github.com/sonirico/naps"
readme = "README.md"
keywords = ["nats", "nats-io", "relay", "proxy", "forward"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.12"
crossbeam = "0.8.1"
crossterm = "0.22.1"
nats = "0.17.0"