[package]
name = "naps"
version = "0.1.1"
edition = "2021"
description = "NATS server proxy service to relay and forward custom topics and subjects"
homepage = "https://github.com/sonirico/naps"
repository = "https://github.com/sonirico/naps"
readme = "README.md"
keywords = ["nats", "nats-io", "relay", "proxy", "forward"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.12"
crossbeam = "0.8.1"
crossterm = "0.22.1"
nats = "0.17.0"
deno_runtime = "0.44.0"
deno_core = "0.118.0"
serde_json = "1.0.78"
serde_v8 = "0.29.0"
rusty_v8 = "0.32.1"
reqwest = "0.11.8"
tokio = { version = "1.16.1", features = ["fs"] }
data-url = "0.1.1"
deno_ast = { version = "0.11.0", features = ["transpiling"] }
tempfile = "3.3.0"
signal-hook = "0.3.4"
